test/sema/generics/generic_argument_redeclared_struct.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
// CHECK: [[# @LINE + 1 ]]:13: error: redeclaration of 'T'
struct S<T, T> { x: number }

fn main(): unit {}

// CHECK-NOT: {{.*error.*}}
